@@ -19,6 +19,8 @@ transmittance=Transmittance
 units.centimeters=cm
 units.liters=L
 units.molesPerLiter=mol/L
+units.mmolesPerLiter=mmol/L
+units.umolesPerLiter=\u00b5mol/L
 units.M=M
 units.mM=mM
 units.uM=\u00b5M
