@@ -1,3 +1,4 @@
+4/24/12 Beers: changed the units shown in the concentration tab.  Was, for example mM, now is mmol/L.
 3/29/12 generalize and migrate ToggleButtonNode and MomentaryButtonNode to piccolo-phet
 3/22/12 restore flavors in build.properties
 # 1.00.03 (62761) Mar 22, 2012
